--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -35,3 +35,24 @@
 #hamburger-1.is-active .line:nth-child(3) {
   transform: translateY(-10px) rotate(-45deg);
 }
+
+.navbar-brand a {
+  min-width: 200px;
+  display: grid;
+  grid-template-columns: 50px 180px;
+  grid-template-rows: 50px;
+}
+
+.navbar-brand a .logo_holder {
+  grid-column: 1/1;
+  grid-row: 1/1;
+}
+
+.navbar-brand a .homeLink {
+  grid-column: 2/2;
+  grid-row: 1/1;
+  padding-left: 5px;
+  padding-top: 15px;
+  vertical-align: middle;
+  font-size: 0.5em;
+}
