--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -38,7 +38,7 @@
 }
 
 .main-navigation .navbar-toggle {
-  margin-top: -5px;
+  margin-top: -1px;
 }
 
 .main-overlay {
@@ -178,4 +178,162 @@
   font-size: 1.5rem;
   font-family: Open Sans;
   font-weight: 800;
+}
+
+
+/* NAV */
+/* overide bootstrap mobile nav styles */
+/* hamburger menu styles */
+.hamburger {
+  position: absolute;
+  top: 15px;
+  right: 8px;
+}
+
+.hamburger .line {
+  width: 39px;
+  height: 2px;
+  background-color: var(--element-14);
+  display: block;
+  margin: 8px auto;
+  transition: all 0.3s ease-in-out;
+}
+
+.hamburger:hover {
+  cursor: pointer;
+}
+
+.hamburger:focus {
+  border: 1px dashed var(--element-4);
+}
+
+#hamburger-1.is-active .line:nth-child(2) {
+  opacity: 0;
+}
+
+#hamburger-1.is-active .line:nth-child(1) {
+  transform: translateY(10px) rotate(45deg);
+}
+
+#hamburger-1.is-active .line:nth-child(3) {
+  transform: translateY(-10px) rotate(-45deg);
+}
+
+.navbar-brand a {
+  display: grid;
+  grid-template-columns: 50px 1fr;
+  grid-template-rows: 50px;
+}
+
+.navbar-brand a .logo_holder {
+  grid-column: 1/1;
+  grid-row: 1/1;
+}
+
+.navbar-brand a .homeLink {
+  grid-column: 2/2;
+  grid-row: 1/1;
+  padding-left: 5px;
+  padding-top: 15px;
+  vertical-align: middle;
+  font-size: 0.5em;
+}
+@media only screen and (max-width: 363px) {
+  .navbar-brand {
+    max-width: 200px;
+  }
+}
+
+.donate {
+  background-color: var(--primary-1);
+  font-weight: 600;
+  border-radius: 2px;
+}
+.donate:hover {
+  background-color: var(--element-15);
+  color: var(--element-4);
+  transition: all 0.1 linear;
+}
+.donate a span {
+  color: var(--element-4);
+}
+@media (min-width: 768px) and (max-width: 1400px) {
+  .container-fluid {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+  }
+  #navbar-list {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    transition: linear;
+    margin-top: 0;
+    padding: 0;
+    position: relative;
+  }
+  .navbar-nav li {
+    padding-top: 0;
+    position: relative;
+  }
+  #navbar-brand {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    width: auto;
+  }
+}
+
+@media (min-width: 768px) {
+  .navbar-right {
+      float: right!important;
+      margin-right: -15px;
+  }
+}
+
+
+/* TOGGLE */
+.toggle-container {
+  display: block;
+  margin-top: -0.5rem;
+  text-align: right;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  .switch {
+    color: var(--element-3);
+  }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 767px) {
+  .toggle-container {
+    z-index: 1;
+    position: absolute;
+    right: 1rem;
+    top: -0.1rem;
+  }
+}
+
+.btn-toggle {
+  position: absolute;
+  width: 1rem;
+  height: 1rem;
+  opacity: 0;
+}
+
+.btn-toggle:checked:focus + .sun {
+  outline: 1px solid var(--element-4);
+}
+
+.btn-toggle:not(:checked):focus + .moon {
+  outline: 1px solid var(--element-4);
+}
+
+.switch {
+  position: relative;
+  color: var(--element-4);
+  width: 2rem;
+  margin: 5px;
 }
