--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,24 +1,29 @@
 @charset "UTF-8";
-@font-face {
-  font-family: 'Open Sans';
-  font-display: swap;
-  font-style: normal;
-  font-weight: 400;
-}
 
-@font-face {
-  font-family: 'Roboto Slab';
-  font-display: swap;
-  font-style: normal;
-  font-weight: 400;
-}
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Roboto+Slab:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&family=Open+Sans:wght@400;600;700&family=Roboto+Slab:wght@400;600;700&display=swap');
 
-@font-face {
-  font-family: 'Lato';
-  font-display: swap;
-  font-style: normal;
-  font-weight: 400;
-}
+/* @font-face { */
+/*   font-family: 'Open Sans'; */
+/*   font-display: swap; */
+/*   font-style: normal; */
+/*   font-weight: 400; */
+/* } */
+
+/* @font-face { */
+/*   font-family: 'Roboto Slab'; */
+/*   font-display: swap; */
+/*   font-style: normal; */
+/*   font-weight: 400; */
+/* } */
+
+/* @font-face { */
+/*   font-family: 'Lato'; */
+/*   font-display: swap; */
+/*   font-style: normal; */
+/*   font-weight: 400; */
+/* } */
 
 :root[color-mode='light'] {
   /* Surface colors: background color of body, menus, footers, navigation bars, modals */
@@ -1037,7 +1042,7 @@ h3 {
 }
 .site-header.flexslider .intro {
   position: relative;
-  z-index: 9999;
+  z-index: 1000;
 }
 .site-header.flexslider .btn-charity-default {
   margin: 0;
